<resources>
    <string name="app_name">HealthyFoodScanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Healthy Food Scanner</string>
    <string name="nav_header_subtitle">healthy.food.scanner@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Налаштування</string>

    <string name="log_in">Вхід</string>
    <string name="sign_up">Реєстрація</string>

    <string name="forgot_your_password">Забули пароль?</string>

    <string name="sign_up_tv">
        <u>Реєстрація</u>
    </string>

    <string name="or">або</string>

    <string name="menu_home">Головна</string>
    <string name="menu_write_to_us">Зв`яжіться з нами</string>
    <string name="menu_rate_us">Оцініть нас в PlayMarket</string>
    <string name="menu_about_us">Про нас</string>

    <string name="result_by_barcode">Продукт</string>
    <string name="profile">Мій профіль</string>
    <string name="add_new_product_title">Добавити новий продукт</string>
    <string name="update_product_title">Оновити продукт</string>
    <string name="products">Продукти</string>
    <string name="search">Пошук продукту</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="barcode">"Штрих-коди: "</string>
    <string name="country_code">Країна, де зареєстрований штрих-код: </string>
    <string name="address">Адреса виробництва: </string>
    <string name="product_name">Назва продукту</string>
    <string name="ingredients">Інгредієнти: </string>
    <string name="nutrition">"Харчові Е-добавки: "</string>
</resources>