<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/menu_home"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kas.healthyfoodscanner.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_write_to_us"
        android:name="com.kas.healthyfoodscanner.ui.gallery.GalleryFragment"
        android:label="@string/menu_write_to_us"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_rate_us"
        android:name="com.kas.healthyfoodscanner.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_rate_us"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.kas.healthyfoodscanner.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_slideshow" />
</navigation>